--- a/app/views/layouts/_dashboard_layout.html.erb
+++ b/app/views/layouts/_dashboard_layout.html.erb
@@ -30,11 +30,22 @@
     <div class="p-6">
       <h2 class="text-xs font-bold text-gray-400 uppercase tracking-widest mb-6">Menu</h2>
       <nav class="space-y-2">
+        <%# Dashboard Link %>
+       
+        
+        <%= link_to root_path, 
+            class: "flex items-center px-4 py-3 rounded-r-lg hover:bg-indigo-50/50 hover:text-indigo-700 transition duration-150 ease-in-out " do %>
+          <svg class="w-5 h-5 mr-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path>
+          </svg>
+          Dashboard
+        <% end %>
+        
         <%# Short URLs Link %>
-        <% active_class = current_page?(short_urls_path) ? 'text-indigo-700 bg-indigo-50 border-l-4 border-indigo-600 font-semibold' : 'text-gray-600 font-medium' %>
+        <% urls_active = current_page?(root_path) && !current_page?(dashboard_path) ? 'text-indigo-700 bg-indigo-50 border-l-4 border-indigo-600 font-semibold' : 'text-gray-600 font-medium' %>
         
         <%= link_to short_urls_path, 
-            class: "flex items-center px-4 py-3 rounded-r-lg hover:bg-indigo-50/50 hover:text-indigo-700 transition duration-150 ease-in-out #{active_class}" do %>
+            class: "flex items-center px-4 py-3 rounded-r-lg hover:bg-indigo-50/50 hover:text-indigo-700 transition duration-150 ease-in-out" do %>
           <svg class="w-5 h-5 mr-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"></path>
           </svg>
@@ -84,7 +95,7 @@
 <% else %>
   
 <div class="flex items-center justify-center h-screen">
-  <div class="bg-linear-to-br from-indigo-50 to-purple-50 flex items-center justify-center px-4 py-16 **w-full**">
+  <div class="bg-linear-to-br from-indigo-50 to-purple-50 flex items-center justify-center px-4 py-16 w-full">
     <div class="max-w-5xl mx-auto text-center">
       
       <h1 class="text-5xl font-black text-indigo-700 mb-8 tracking-tighter">Winkly</h1>
@@ -94,7 +105,7 @@
       </h2>
       
       <p class="text-xl md:text-xxl text-gray-600 mb-10 max-w-3xl mx-auto">
-        Create **dynamic short links** that alternate between two destinations. Perfect for seamless A/B testing, campaign rotation, and maximizing click potential.
+        Create dynamic short links that alternate between two destinations. Perfect for seamless A/B testing, campaign rotation, and maximizing click potential.
       </p>
       
       <div class="flex flex-col sm:flex-row justify-center space-y-4 sm:space-y-0 sm:space-x-6">
