--- a/app/views/layouts/_dashboard_layout.html.erb
+++ b/app/views/layouts/_dashboard_layout.html.erb
@@ -11,7 +11,7 @@
             </svg>
           </button>
           <%= link_to root_path, class: "flex-shrink-0" do %>
-            <h1 class="text-3xl font-extrabold text-indigo-600 tracking-tight">Winkly</h1>
+            <h1 class="text-3xl font-extrabold text-indigo-500 tracking-tight">Winkly</h1>
           <% end %>
         </div>
         
@@ -20,7 +20,7 @@
             <%= current_user.email %>
           </span>
           <%= button_to "Sign Out", destroy_user_session_path, method: :delete, 
-              class: "px-4 py-2 text-sm font-semibold text-white bg-red-600 rounded-lg hover:bg-red-700 shadow-md transition duration-150 ease-in-out" %>
+              class: "px-4 py-2 text-sm font-semibold text-red-700 rounded-lg hover:bg-red-600 hover:text-white shadow-sm transition duration-150 ease-in-out" %>
         </div>
       </div>
     </div>
